--- a/android_num_10_TW_ReceiptLottery/app/src/main/res/layout/activity_second.xml
+++ b/android_num_10_TW_ReceiptLottery/app/src/main/res/layout/activity_second.xml
@@ -98,7 +98,7 @@
         app:layout_constraintTop_toBottomOf="@+id/BtnBtoC" />
 
     <EditText
-        android:id="@+id/e1"
+        android:id="@+id/edit1"
         android:layout_width="100sp"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
